--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "react-dom": "16.13.1",
     "remark": "^12.0.0",
     "remark-html": "^11.0.1"
-  }
+  },
+  "scripts": {
+  "dev": "next",
+  "build": "next build",
+  "start": "next start -p $PORT",
+  "heroku-postbuild": "npm run build",
+},
 }
